Fix Siegewar sessions, use better server software